--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,21 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/animate.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/classy-nav.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/magnific-popup.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/owl.carousel.min.css') }}">
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script src="{{ asset('assets/js/bootstrap/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('assets/js/bootstrap/popper.min.js') }}"></script>
+            <script src="{{ asset('assets/js/jquery/jquery-2.2.4.min.js') }}"></script>
+            <script src="{{ asset('assets/js/plugins/plugins.js') }}"></script>
+            <script src="{{ asset('assets/js/active.js') }}"></script>
         {% endblock %}
     </head>
     <body>
