--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomepageController!{% endblock %}
+{% block content %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="content-wrapper">
+        {% for product in products %}
+            <div class="product">
+                <div class="image"><img src="{{ product.image }}"></div>
+                <div class="texts">
+                    <div class="title">{{ product.title }}</div>
+                    <div class="description">{{ product.description }}</div>
+                </div>
+                <div class="numbers">
+                    <div class="price">Price: {{ product.price }}</div>
+                    <div class="amount">Amount: {{ product.amount }}</div>
+                </div>
+                <div class="buttons">
+                    <div class="button button-more">Details</div>
+                    <div class="button button-add-to-cart">Add to cart</div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/app/src/Controller/HomepageController.php'|file_link(0) }}">src/Controller/HomepageController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/app/templates/homepage/index.html.twig'|file_link(0) }}">templates/homepage/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
