--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -15,8 +15,8 @@
                     <div class="amount">Amount: {{ product.amount }}</div>
                 </div>
                 <div class="buttons">
-                    <div class="button button-more">Details</div>
-                    <div class="button button-add-to-cart">Add to cart</div>
+                    <div class="button button-more"><a href="">Details</a></div>
+                    <div class="button button-add-to-cart"><a href="">Add to cart</a>2qq</div>
                 </div>
             </div>
         {% endfor %}
