--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -3,6 +3,11 @@
         <li>Home</li>
         <li>Categories</li>
         <li>Tags</li>
-        <li>Login</li>
+        {% if app.user %}
+            <li><a href="{{ path('app_logout') }}">Logout</a></li>
+        {% else %}
+            <li><a href="{{ path('app_register') }}">Register</a></li>
+            <li><a href="{{ path('app_login') }}">Login</a></li>
+        {% endif %}
     </ul>
 </div>
